--- a/doc/trex_faq.asciidoc
+++ b/doc/trex_faq.asciidoc
@@ -563,7 +563,7 @@ Starting from version 2.21, new ``--no-hw-flow-stat'' flag will make x710 card b
 === Bird Integration
 
 ==== What is BIRD?
-BIRD is an "Internet Routing Daemon", a non-interactive program running on background works as a dynamic router in an Internet type network. You can find out more at link:https://bird.network.cz/?get_doc&f=bird.html&v=20[Bird's Doc], or read the link:trex_stateless.html#_Bird_integration[Bird Integration] chapter where you can find out useful tutorials.
+BIRD is an "Internet Routing Daemon", a non-interactive program running on background works as a dynamic router in an Internet type network. You can find out more at link:https://bird.network.cz/?get_doc&f=bird.html&v=20[Bird's Doc], or read the link:trex_stateless.html#_bird_integration[Bird Integration] chapter where you can find out useful tutorials.
 
 ==== Where can I find samples of bird configuration files?
 bird/cfg folder contains some simple bird configuration files. Some of the files include routing protocols (RIP, BGP, OSPF..) and others include ipv4 and ipv6 routing sample. You can create your own .conf file, more information may be found at link:https://bird.network.cz/?get_doc&v=20&f=bird-3.html[Bird's Configuration Doc].
@@ -575,7 +575,7 @@ There are 2 ways, using a python script: creatin a client and calling "set_bird_
 When creating a bird node using "client.set_bird_node(..)" or the plugin command, pass mtu parameter with the wanted mtu value. Another way is using "client.set_mtu(mac, mtu)" method, setting an existing bird node.
 
 ==== Do I need "service mode" for bird usage?
-Yes, service mode has to be enabled or at least at "filtered mode" with the right mask and --software flag on. Bird's packets i.e BGP will be redirected to rx, you can find out more on link:trex_stateless.html#_Port_service_mode[Stateless service mode] or at link:trex_astf.html#_Port_service_mode[ASTF service mode].
+Yes, service mode has to be enabled or at least at "filtered mode" with the right mask and --software flag on. Bird's packets i.e BGP will be redirected to rx, you can find out more on link:trex_stateless.html#_port_service_mode[Stateless service mode] or at link:trex_astf.html#_port_service_mode[ASTF service mode].
 
 ==== Should I use service mode or service filtered mode?
 Depends, fully service mode will forward all the packets to rx to be processed by client or capture. That will have a performance penalty since rx has to process more packets than usual, but you can be sure you are not loosing any packet during the process. Filtered mode on the other hand preserves the none service performance and filtered the wanted packets to rx using a bit mask. Notice filtered mode requires --software mode. 
