--- a/doc/trex_index.asciidoc
+++ b/doc/trex_index.asciidoc
@@ -91,6 +91,8 @@ link:trex_stateless_wlc_bench.html[WLC benchmark]
 link:trex_analytics.html[trex_perf_trend.html] 
 | TRex performance SR_IOV  | 
 link:trex_vm_bench.html[sr_iov_bench]
+| TRex NDR benchmark script | 
+link:trex_ndr_bench_doc.html[ndr_bench]
 |=================
 
 == For Developers
