--- a/doc/trex_astf.asciidoc
+++ b/doc/trex_astf.asciidoc
@@ -2478,6 +2478,7 @@ link:cp_astf_docs/index.html[python index]
 |   tcp.blackhole   |0,1,2|0|-|+| 0 - return RST packet in case of error. 1- return of RST only in SYN. 2- don't return any RST packet, make a blackhole 
 |   tcp.delay_ack_msec | 20-500|100|-|+| delay ack timeout in msec.  Reducing this value will reduce the performance but will reduce the active flows
 |   tcp.no_delay    | bool   | 0|+|+|  In case of 1 disable Nagle. Will push any packet with PUSH flag (*NOT* standard it just to simulate Spirent) and will respond with ACK immediately (standard). 
+|   tcp.no_delay_counter    | 0-255   | 0|+|+|  number of recv packets to wait until ack is send. notice ack can be triggered by tcp timer, in order to ensure fixed number of sent packets until ack you should increase the *tcp.initwnd* tunable. otherewise no_delay_counter will race with the tcp timer.
 |   scheduler.rampup_sec    | 3-60000  | disabled |-|+|  scheduler rampup in seconds. After this time the throughput would be the maximum. the throughput increases linearly every 1 sec.
 |   scheduler.accurate    | bool | disabled |-|+|  Make the scheduler more accurate in expense of performance. more important in low performance rates (<20gb)
 |=================
